# Aurora

./: .gitignore  Cargo.toml  README.md  build.py  build.rs  build_manifest.py  clean_addons.py  devrun.ps1  main.py  release.py
Lang/: cn.json  de.json  en.json  es.json  jp.json  langs.json  nl.json  ru.json  tr.json  vi.json
Lang/questions/: 1.json.disabled  2.json  3.json  4.json
crates/backend/: Cargo.toml
crates/backend/src/: engine.rs  handler.rs  lib.rs
crates/backend/src/classes/: addons.rs  rpc.rs  validate.rs
crates/backend/src/classes/addons/: mod.rs  pak.rs  scale.rs
crates/backend/src/engine/: files.rs  inject.rs  mod.rs  monitor.rs  process.rs  sanitize.rs  state.rs  validate.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs  lock.rs  manifest.rs  protocol.rs
crates/main/: Cargo.toml  build.rs
crates/main/src/: bridge.rs  main.rs  translations.rs
crates/main/src/classes/: buttons.rs  filedrop.rs  mod.rs  popup.rs  repair.rs  settings.rs  toast.rs  updater.rs
crates/main/src/classes/pages/: addons.rs  gbbrowser.rs  mod.rs  modmanager.rs  modules.rs  screenshots.rs  settings.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs  logger.rs  modmanager.rs  pathfind.rs  utils.rs
crates/shared/src/classes/: info.rs
crates/shared/src/classes/gamebanana/: api.rs  cache.rs  types.rs
crates/shared/src/classes/info/: mod.rs  paths.rs  version.rs
crates/updater/: Cargo.toml
crates/updater/src/: logfile.rs  main.rs  net.rs
dev/: requirements.txt  scandir_rs-2.9.9-cp314-cp314-win_amd64.whl
docs/: ModDisplayFile.md  SmartAppControl.md  Translations.md
frontend/: global.slint  languages.slint  main.slint  translations.slint
frontend/components/: gbbrowser.slint  modcard.slint  pages.slint  popup.slint  toast.slint
frontend/components/pages/: menu.slint  modmanager.slint  settings.slint
frontend/components/pages/menus/: addons.slint  lua.slint  modules.slint  screenshots.slint
production/: VERSION
production/Langs/: lang-codes.json  translations.json
src/: config_manager.py  discord_rpc.py  engine.py  logger.py  main.rs  mod_manager.py  path_finder.py  styles.py  translator.py  ui_main.py  updater.py  utils.py
src/backend/: engine.py  updater.py
src/backend/helpers/: addons.py  api.py  gamebanana.py  paths.py  steam.py  validation.py  window.py
src/frontend/: styles.py  ui_main.py
src/frontend/classes/: dev_console.py  elements.py  faq.py  mod_manager.py  notification.py  settings.py  steam.py  update_overlay.py  widgets.py
src/gamebanana/: api.py  window.py
src/helpers/: paths.py  shortcut.py
src/ui/: drive_search.py  elements.py  mod_manager.py  settings.py  update_overlay.py
