[workspace]
members = ["crates/main", "crates/backend", "crates/shared"]
resolver = "2"

[workspace.dependencies]
log = "0.4"
anyhow = "1.0"
jwalk = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
dirs = "6"
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
