[package]
name = "backend"
version = "2.0.0"
edition = "2021"

[dependencies]
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
shared = { path = "../shared" }
log = { workspace = true }
anyhow = { workspace = true }
jwalk = { workspace = true }
rayon = { workspace = true }

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
empty_structs_with_brackets = "warn"
rest_pat_in_fully_bound_structs = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
