[package]
name = "aurora"
version = "2.0.0"
edition = "2021"

[dependencies]
slint = { version = "1.16.1", features = ["backend-winit"] }
backend = { path = "../backend" }
shared = { path = "../shared" }
display-info = "0.5"
log = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
slint-build = { version = "1.16.1" }
image = "0.25"

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
empty_structs_with_brackets = "warn"
rest_pat_in_fully_bound_structs = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
