[package]
name = "Aurora"
version = "2.0.0"
edition = "2021"

[dependencies]
slint = { version = "1.17", default-features = false, features = [
    "renderer-femtovg",
    "backend-winit",
    "compat-1-2",
] }
# TODO: Needs testing on linux to see what features it needs.
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }

once_cell = "1"
display-info = "0.5"
open = "5"

backend = { path = "../backend" }
shared = { path = "../shared" }

log = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
slint-build = { version = "1.16.1" }
image = "0.25"
serde_json = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
empty_structs_with_brackets = "warn"
rest_pat_in_fully_bound_structs = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
