[package]
name = "Aurora"
version = "2.0.0"
edition = "2021"

[dependencies]
slint = { version = "1.17", default-features = false, features = [
    "renderer-femtovg",
    "backend-winit",
    "compat-1-2",
] }
i-slint-backend-winit = { version = "1.17", default-features = false }
# TODO: Needs testing on linux to see what features it needs.
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
once_cell = { workspace = true }
display-info = "0.5"
open = "5"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
] }
unrar = { package = "unrar-ng", version = "0.7" }
archive = "0.3"
arboard = { version = "3", default-features = false, features = ["image-data"] }

backend = { path = "../backend" }
shared = { path = "../shared" }
ipc = { path = "../ipc" }

log = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
sysinfo = { workspace = true }

[build-dependencies]
slint-build = { version = "1.17" }
image = "0.25"
serde_json = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }
mslnk = "0.1"

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
empty_structs_with_brackets = "warn"
rest_pat_in_fully_bound_structs = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
