[package]
name = "shared"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scandir = { workspace = true }

log = { workspace = true }
env_logger = "0.11"
env_filter = "1.0"
chrono = "0.4"
termcolor = "1.4"

reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }

anyhow = { workspace = true }
futures = "0.3"

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
empty_structs_with_brackets = "warn"
rest_pat_in_fully_bound_structs = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"