[package]
name = "shared"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = { version = "0.11", default-features = false }
env_filter = { version = "2.0.0", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std"] }
termcolor = "1.4"
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
    "query",
] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
futures = { version = "0.3", default-features = false }

anyhow = { workspace = true }
rayon = { workspace = true }
jwalk = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }

[lints.clippy]
enum_glob_use = "warn"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
empty_structs_with_brackets = "warn"
rest_pat_in_fully_bound_structs = "warn"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
